<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_nome"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/app_name"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etNum1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/etNum1"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/etNum2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_nome"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/etNum2"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/btnDescubra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNum1" />

    <TextView
        android:id="@+id/tvMaior"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNum2" />

    <Button
        android:id="@+id/btnDescubra"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginBottom="108dp"
        android:hint="@string/btnDescubra"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/btnSomar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNum2" />

    <TextView
        android:id="@+id/tvSoma"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnSomar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDescubra"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginBottom="61dp"
        android:hint="@string/btnSomar"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDescubra" />
</androidx.constraintlayout.widget.ConstraintLayout>